fix profile drop down postion; fix login/signup page; fix meet your seller; fix product tile image alignment; fix product crearte/update width

--- a/react-app/src/components/Navigation/ProfileButton.css
+++ b/react-app/src/components/Navigation/ProfileButton.css
@@ -32,3 +32,7 @@
     display: flex;
     flex-direction: column;
 }
+
+.dropdown-container ul {
+    padding-left: 0;
+}
