--- a/react-app/src/components/ProductForm/productForm.css
+++ b/react-app/src/components/ProductForm/productForm.css
@@ -1,7 +1,7 @@
 .product-form {
     max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
+    margin: 10px auto;
+    padding: 10px 40px 10px 20px;
     border: 1px solid #eaeaea;
     background-color: #f9f9f9;
     border-radius: 5px;
